--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
 	<ul>
 		<li>
-			<a href="https://course.acciojob.com/journey"> 
+			<a href="https://course.acciojob.com/journey" arget="_blank" > 
 				<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="dog" />
 			</a>
 		</li>
 		<li>
-			<a href="https://en.wikipedia.org/wiki/Poodle" >
+			<a href="https://en.wikipedia.org/wiki/Poodle" target="_blank" >
 				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="dog" />
 			</a>
 		</li>
