--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<ul>
 		<li>
-			<a href="https://course.acciojob.com/journey" arget="_blank" > 
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever" arget="_blank" > 
 				<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="dog" />
 			</a>
 		</li>
